# GAN-you-hear-it

./: .gitattributes  .gitignore  README.md  dataset.py  gann.py  generator.py  helpers.py  overfit.py  play_snippet.py  preprocessing.py  pyproject.toml  requirements.txt  train-pretrained.sbatch  train-pretrained.sh  train-remote-pretrained.sh  train-remote.sh  train.py  train.sbatch  train.sh
gan/: gan.py
training_data_small/: arr_0.npy
