[tool.poetry]
name = "gan-you-hear-it"
version = "0.1.0"
description = ""
authors = ["Anselm Coogan <anselm.coogan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"
pytorch = "^1.0.2"
librosa = "^0.7.2"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
